# codex-repo-tool

./: AGENTS.md  README.md  pyproject.toml
docs/: AGENTS.md
examples/: sample.diff
src/codex_repo_tool/: __init__.py  cli.py  config.py  docker_sandbox.py  fs_utils.py  github_api.py  model_adapter.py  patch.py  playbooks.py  policy.py  qa.py  sandbox.py  search.py  semantic.py  task.py
tests/: conftest.py  test_bundle.py  test_cli.py  test_docker_checks.py  test_fs.py  test_github_api.py  test_model_adapter.py  test_patch.py  test_policy.py  test_search.py  test_semantic.py  test_task.py
tooling/: schema.json
tooling/playbooks/: add-tests.yml  bugfix.yml
